--- a/index.html
+++ b/index.html
@@ -30,54 +30,55 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/thumbs/blue_sky.jpeg" class="image"><img src="images/thumbs/blue_sky.jpeg" alt="" /></a>
-							<h2>Painting 028</h2>
+							<a href="images/fulls/blue_sky_full.jpeg" class="image"><img src="images/thumbs/blue_sky_thumbs.jpeg" alt="" /></a>
 							<p>Oil painting on textured stretched canvas</p>
-							::after
+							
 						</article>
 						<article class="thumb">
-							<a href="images/thumbs/earth.jpeg" class="image"><img src="images/thumbs/earth.jpeg" alt="" /></a>
+							<a href="images/fulls/earth.jpeg" class="image"><img src="images/thumbs/earth_thumbs.jpeg" alt="" /></a>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/galaxy.jpeg" class="image"><img src="images/thumbs/galaxy.jpeg" alt="" /></a>
+							<a href="images/fulls/karina_arengato.jpg" class="image"><img src="images/thumbs/sky_stars_thumbs.png" alt="" /></a>
+							<h2>Hi, I'm Karina</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/mars.jpeg" class="image"><img src="images/thumbs/mars.jpeg" alt="" /></a>
+							<a href="images/fulls/galaxy.jpeg" class="image"><img src="images/thumbs/galaxy_thumbs.jpeg" alt="" /></a>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/starry_night.jpeg" class="image"><img src="images/thumbs/starry_night.jpeg" alt="" /></a>
+							<a href="images/fulls/mars.jpeg" class="image"><img src="images/thumbs/mars_thumbs.jpeg" alt="" /></a>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
+							<a href="images/fulls/starry_night.jpeg" class="image"><img src="images/thumbs/starry_night_thumbs.jpeg" alt="" /></a>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
+							<a href="images/fulls/abcd.jpeg" class="image"><img src="images/thumbs/abcd_thumb.png" alt="" /></a>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
+							<a href="images/fulls/arrays.jpeg" class="image"><img src="images/thumbs/arrays_thumbs.jpeg" alt="" /></a>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
+							<a href="images/fulls/blue_sky_full.jpeg" class="image"><img src="images/thumbs/blue_sky_thumbs.jpeg" alt="" /></a>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
+							<a href="images/fulls/colors.jpeg" class="image"><img src="images/thumbs/colors_thumbs.jpeg" alt="" /></a>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
+							<a href="images/fulls/floats.jpeg" class="image"><img src="images/thumbs/floats_thumbs.jpeg" alt="" /></a>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
+							<a href="images/fulls/multiple_moons.jpeg" class="image"><img src="images/thumbs/multiples.moons_thumbs.jpeg" alt="" /></a>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
+						
 					</div>
 
 				<!-- Footer -->
