--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Multiverse by HTML5 UP</title>
+		<title>Karina Arengato</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -31,52 +31,52 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="images/fulls/blue_sky_full.jpeg" class="image"><img src="images/thumbs/blue_sky_thumbs.jpeg" alt="" /></a>
-							<p>Oil painting on textured stretched canvas</p>
-							
+							<p>Oil painting on canvas</p>							
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/earth.jpeg" class="image"><img src="images/thumbs/earth_thumbs.jpeg" alt="" /></a>
+							<p>Palette knife oil painting on canvas</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/karina_arengato.jpg" class="image"><img src="images/thumbs/sky_stars_thumbs.png" alt="" /></a>
 							<h2>Hi, I'm Karina</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<p>Art is my passion. Come explore this wonderful world with me.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/galaxy.jpeg" class="image"><img src="images/thumbs/galaxy_thumbs.jpeg" alt="" /></a>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<p>Oil painting on canvas</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/mars.jpeg" class="image"><img src="images/thumbs/mars_thumbs.jpeg" alt="" /></a>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<p>Oil painting on canvas</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/starry_night.jpeg" class="image"><img src="images/thumbs/starry_night_thumbs.jpeg" alt="" /></a>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<p>Palette knife oil painting on canvas</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/abcd.jpeg" class="image"><img src="images/thumbs/abcd_thumb.png" alt="" /></a>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<p>Oil painting on canvas</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/arrays.jpeg" class="image"><img src="images/thumbs/arrays_thumbs.jpeg" alt="" /></a>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<p>Palette knife oil painting on canvas</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/blue_sky_full.jpeg" class="image"><img src="images/thumbs/blue_sky_thumbs.jpeg" alt="" /></a>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<p>Oil painting on textured canvas</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/colors.jpeg" class="image"><img src="images/thumbs/colors_thumbs.jpeg" alt="" /></a>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<p>Oil painting on canvas</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/floats.jpeg" class="image"><img src="images/thumbs/floats_thumbs.jpeg" alt="" /></a>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<p>Oil painting on canvas</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/multiple_moons.jpeg" class="image"><img src="images/thumbs/multiples.moons_thumbs.jpeg" alt="" /></a>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<p>Oil painting on canvas</p>
 						</article>
 						
 					</div>
